first-attempt-at-closing

--- a/ThreeDApp2/Form1.resx
+++ b/ThreeDApp2/Form1.resx
@@ -124,89 +124,89 @@
   <data name="zoomInBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG1SURBVDhPlZFLSwJRFMetoBZZUYv6CrVr3yJo0SeoD9Ai
-        iKAIIiKI7qZInfKRo+YD0zEzp8l3aTolvRSJwiJbGrQIehMURJk3r9xwrkLaD/4M957zOxzuiMoxb3D2
-        qJ1hjW4zalE4gvJpjaMDl/5mUqJvUm/wAf7q7v38CUKU5GMW+k/TDypHSNfPsjW4tRQAQLWW4/mz+0xe
-        LE7i+jWDhuD2Uiirb+j4+vlLKI3OLBJD0CZAb2/HCsmyd98lbEbpGxgjzsmHb6iwBymskFhCiahQROnq
-        7ct/hZvQXNSCFRKzP+b/bfpNyQa5LK2HaayQyJkAOLn9IITiAXzq5m1O7+zGCskwzYqN3N6zUBAG/R21
-        M+LD7SQAsLWUifPYwvGMznvwUrxJNP34SbO7EaCyNWKlwIhKVSdbcYVYPpFdMLu3AaDFCltgxpR7E/Sw
-        evfBpszqGRRBWIWVAuMUU5+TdrxH51BmcYfRMFwqz7zW3ixnPIe+4wtIWV17aBgulQdQTKuSye0Yu4QL
-        jCc2ITU14FJlSI2cYSuegkrGmwCLxhZ8XTmzhtVOiWnDOKVca8NX/0Ak+gGDoolXKFvkEgAAAABJRU5E
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG1SURBVDhPlZFLLwNRFMeLhIVXWPAV2NlbSCx8Aj6AhUQk
+        RCIiEundkNKhDx2taRvaoarT6buoMTRebRohJWrnsZLQYkMiVK/e5jbmtonyS/6Z3HvO7+TkjqwUCqOj
+        U+cQFgyusEVt31JNLNhbcel3xqaZep1TDIpXD2/nTxCixFMZGDi9SWrtIUMPx1Xg1mIAAOV6XhTPHtM5
+        sTCx65c0GoLbi6Gs/v7j29SnVBqSzxFD0CaAsbVghWTRt++WNqN09w4T53jyC6ptWxRWSCyhWFgqorR3
+        dee+0k1oPmzBCslSIBLIN+VTtEE28+sCjRUSFRsEJ/fvhFA4QEzcvU4xjg6skAzQXI2JF5+lgjTo7+gc
+        O37cTgIAV0mZea9ViKYNvoOXwk12bx4/aG53B2hX6rDyw6BWW6VcdofWhWhmdsmzCQBdo14Jys3ZN0EP
+        y3gOXEqrt08GYRlWfhih2OqstO07OodKi0dAw3CpNAq9rUHFeg/9xxeQsrr30DBcKg2g2CYNm90xcgln
+        WW9kdMZci0t/Y8bEGzeiCahhfTEwZ2rE139n0rjaNm12msY1a8346h/IZN9VmolBtbkPOAAAAABJRU5E
         rkJggg==
 </value>
   </data>
   <data name="zoomOutBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGsSURBVDhPlZHNSgJRFMetoBZZUYt6hdr1BkHPUA/QIoig
-        CCIiCO+mKB3zI0dtVEzHzBxHHT9K0ynpy5AoNLKlQougNCMoiLJuTlyzUcv6wX9zz/kdDucKarGgs/er
-        7CG11hkxyW0B2aza1oNKvzO9SLSpHKyfvbx5StxByCWefYe+01RGaQtqBymqAbVWAgCo19Ase3ab/xTL
-        E0s/5LkhqL0SzOwdOUrnXqvJxXCbAMLajRQ+K549VzXpe+KZNyi3BjCk8DEFY5Fi48DQBC/joqWvITgd
-        MSGFj9EX9RWbfkq8kOWNEI4UPjLSD06un6uKxbDJq8d5wt6HFD6jOCXU07u5aiIX7ndU9rAXtfMBgGrE
-        DDRjCR3ntZ79+/JNIqnsC07thIHS0oqUEmNKZZNk1RWk2Ni71OjeAgAXyi1+kaFwE+6whHvfKTEzwwII
-        65BSYhIjmwvStucwASUmd4gbhkq1WdBY22Ukc+A9OoeY2bXLDUOl2gCM7FSQhR2jF1BKMtEpsaEFlf6G
-        WE/rNo+TUEF6YmBJ34Ge/86cbq130eDQzyjWu9DTPxAIPgARjY+zQW859gAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGrSURBVDhPlZFLLwNRFMeLhIVXWPAV2PkGEp+BD2AhEQmR
+        iIhEejekj9HH6FS1ndAOVTOdvouaDo1Xm0ZICXbKSqL12JAI5ZqRWzVtKb/kv7nn/E5OzpWVQ2Ghuww0
+        ZzS5ozadc107YXS2o9LvjCnNjQYXH+LPb56O7yAUk7x9h8HDVAZ3hk09DFOFWosBAFTOsjx/lM5+ioVJ
+        XDxkxSGovRjMHujfv7x9LSXnIm4CzI42pEiZ8297Sknfk8y8QZ1jHUOKFFs4Ec01dvcOSzIk13wNIdio
+        DSlS5oOxYK7ppySFzKxwBFKkaKkQOLh+Linmwp9dPU6Z6U6kSBkgmDory9+XEsWIv2OgIwHULgUAphoj
+        WZ+di2dN/p2Hwk02U+kXgtmMAHyxASl5BnG8Rr3gCa9w8ffpee8aAESdbjEkJ4WbiIc1e3fcaruvTwZh
+        BVLyjGBUrSBt+PeOodrm5cRhqFQexayjSUv5dgP7JxCze7bEYahUHoBRLXpK2DF2CqcpX2xURdaj0t9Q
+        WVnLavwM6il/Amiszej570xaljqUpMs6rl9uRU//QCb7AON2j51jxi+4AAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="moveBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC/SURBVDhPY8AH4rqP9IMwlEsaiOk82tuw4tnXprXPv8d1
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAC/SURBVDhPY8AH4rqP9IMwlEsaiOk82tuw7NnXprXPv8d1
         HpkCFSYOhNTtiI7rOnahZf3L/yAMYoPEoNLEgYCKLcb1q578B2EQGypMPCDZAHQn4jMAwzvxnUe647qO
         XgAphGHfyi0xMANAbGS5+O4jFxNgsRPXdaSnERjazRteghUj486t78AYXRyktnHts+/xXUcmUG4ACFDk
-        BRigKBCxAXwGEAUoMgDkRIqTMjADtcMyUzwwY0GFSQOEszMDAwAlehXQrIWVzAAAAABJRU5ErkJggg==
+        BRigKBCxAXwGEAUoMgDkRIqTMjADtcMyUzwwY0GFSQOEszMDAwAUxhXIhFG7zgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="scaleBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJTSURBVHhe7ZvBThtBDIbzElS8YQpZXqJqJRTYA1fUZKU+
-        StOWQ2/lwHNw4wJ0Z2RLs4kzOH+82cnGn/RLzBg7v00yO4cwcRzHcZxN6lnzu66ad9btxeIXhSbz2eIh
-        jUW1v0/hwePh5zSWeleTFohFLpufFNp4gRhPXmTweNWs1uMU0gMnFoYPYI8BrNK3/bEylj6ck6Sull+v
-        q/s3/hzndD29f6a0DvGR2T41aKkjfcykj5dDU8+WX+pp85o2mhOldcjFthKaTgqvaLso7q4WZ/Oq+Zf4
-        tBtA6XSav/j+dFIDWG9+ftmcn8wApObDfq7J22r5Z+dzrJRDMGVb84HcACBKOwRzzQfYKy3HxUfNB3ID
-        gO4BpaBpPpAbQC5WNNrmA/Gy1IqWHaABDH0I7tJ8IN4YW9GyAzSAIQ/BXZv/CO6DlmVj3XwAugcMQR/N
-        Hw1FNp8ehAfTrHm8+fzjE1kwAb4HiAZ7lnXzAa5NSz2c+O3vS++CTSqAa3OiZNhasEkFcG1OlAxbCzap
-        AK7NiZJha8EmFcD3gLEMAMYHMJIB7H0PkAxbq88BwLU5UTJsLdikArg2J0qGrQWbVADX5kTJsLVgkwrg
-        2pwoGbYWbFKB3wNQfAAjGYDfA9DanCgZthZsUgFcmxMlw9aCTSqAa3OiZNhasEkFcG1OlAxbCzapwO8B
-        KD6AkQwg3AFO+iMA1+ZEybC1JJPSX067lyLVVsGJhxS9dGSvvXYovC/FVbRJG/910afWv9LO+7SM7LDX
-        8X6UX5cPb+vQCC0j2j3HcRxHxWTyH9IXUohM7Z4lAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJVSURBVHhe7ZvBThtBDIbzEkW8IBKQ7UtUFFWBPXCrqiYr
+        9VGaUg7c4MBzcONCy87IlmYTMzh/vNnJxp/0S8wYO79NMjuHMHEcx3Gcdeppc1tXzX/W9dn8D4Ums+n8
+        Lo1Ftb9P4cHj4ec0lnpXkxaIRc6b3xRae4EYT15k8HjVLFfjFNIDJxaGD2CLASzTt/2+MpY+nIOkrhYX
+        l9X3f/w5zunbyY9nSusQH5ntU4OWOtLHTPp42TX1dPGlPmle00ZzorQOudi7hKaTwkvaLoqbz/NPs6p5
+        SHzaDaB0Os2f/Xw6qAGsNj87b44PZgBS82E/1+R1tfi78TlWyiGY8l7zgdwAIEo7BHPNB9grLcfFR80H
+        cgOA7gGloGk+kBtALlY02uYD8bLUipYdoAEMfQhu0nwg3hhb0bIDNIAhD8FNm/8I7oOWZWPdfAC6BwxB
+        H83vDUU2nx6EO9O0ebw6/XVEFkyA7wGiwZ5l3XyAa9NSDyd+vX/pXbBJBXBtTpQMWws2qQCuzYmSYWvB
+        JhXAtTlRMmwt2KQC+B4wlgHA+ABGMoCt7wGSYWv1OQC4NidKhq0Fm1QA1+ZEybC1YJMK4NqcKBm2FmxS
+        AVybEyXD1oJNKvB7AIoPYCQD8HsAWpsTJcPWgk0qgGtzomTYWrBJBXBtTpQMWws2qQCuzYmSYWvBJhX4
+        PQDFBzCSAYQ7wEF/BODanCgZtpZkUvrLafdSpNoqOHGXopeObLXXDoX3pbiKNmntvy761OpX2nmflpEN
+        9jre9/Lr8uFtHRqhZUS75ziO46iYTN4Anj9SfOg/9QcAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="panBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKCSURBVFhH7ZfNbxJBGMbRGONZPXrxj/DswVSWskCJetCr
-        icfGaIy34keELbvbbeJXeujFSrzZgx6MMWkibNlZtMam0I220GjlUDVQu0spFceZOtsaHVTYpYMNT/Ic
-        Zia8zy+7w74znh2lU5GZvbwMhnkpVfYJ6VJwCCh4jiyzVx8C6r+ftV59qELs/rGshSHJMnvxklrGYIXy
-        tw1PLVYhfpJkmb28QnoTzjaeI8vs1QV0qi6gU3UBneq/BeTjqP0JYLk3rq2EJHDzaGRiD/nJ9qoR4IXE
-        7I/2VyTtT9TvBId0iUNdZluhaYCxxwWYL22NXxfXYM9gsn5+LGfhVkiDbttBgwZI82iyCOc+1zfHv0G3
-        66Dxr4A0/wrdloOGE0CacT1S2h11AZ2qcwEh3IXuIqMnlJertKAzt6eaGtt2DdAvpi+evTttGh/XGwY1
-        M/55nkS0Ll56cZCLgor+bpUags0UsFfUBgYe5iq0ANtMAcMKePvMWKYG2GYK6I9q1UZ7zzZTQN+NZC23
-        1MGAQSUz39mvOK4J18bzVVqAbaaAPaJ2OCSpVnapRg3BZv6hDsrgnvxkYY0W4sSuAXKCdoiLgQo+eNKC
-        WvGbT1+hL66tkwjnCqJ7xfVxg9qLW3Eqb8I+RV8k5Z3rWBQc4CXV/FPLa8axR4VaQAS3SHl3hNrepXMj
-        0+Z8aevo3orVggW9YsrCW4eUdkeRCNyNLjrJy4mZioH2EC38b34+twLDw2nTO6idJmXdFbrf7gtIegKH
-        jEws1Cfz1saGp8HYxp+op7NleBXtYU4CX9CTO0nKtU9cVD0SUjIPArL+Hv8b8SejodFxLSxlDL8IrhyX
-        J/eTEjtBHs93RSGectv9/OUAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKCSURBVFhH7ZfNTxNBGMarMcazevTiH+HZA6EFut3SRA96
+        NfFIjMZ4oxi+SneWJVExHrhYiSc1MR6MMSFQS3e2ipG0pVHYGsUeUNMiu6UU6ziDs2B0qra7ZSrpkzyH
+        mUnf55fd6b4zrj2l08HkQUGGYwKIFjzD8bw4ChUyR5f5qxsD9dxJmS8/lBBxTyRlEki6zF/kyRGwbOHb
+        lueWS4g8SbrMX55QfBvOMpmjy/zVArSrFqBdtQDt6r8FFMK4/YXgaldYXfMDeO1kcOoA/cnuqhrgxcmF
+        H+0vR9ufpI2LoxogXWZXoVmAw4+ySM/vjF/lNlDbyHTlQiRtklbIgm7YQYMFyPJENIcWP1e2x79BN+qg
+        8a+ALP8K3ZCDhh1Alkk9WtoZtQDtqnkBEdqH7yITAeXFOivo7I25msaWHQP0SvFL58bnjczHzapBtYx/
+        nqcR9UsAz4+6B2BRe7fODCHmCtglqb2995NFVoBlroABBb55mlllBljmCugdUEvV9p5lroCd/dPl9EoT
+        A4pKYqm5X3FYDfXd00usAMtcAdsl9bgfRM3USpkZQsz9Qy3K8Lb8+O0GK8SOHQPsCKnH3IOwSA6erKB6
+        /PrTV9QZVjdphH2J+F7R/yDN7MX1+JluoG5FW6bl7attCB4RQMz4U8urxYMPs2WfBK/T8s4It73L52/O
+        G0v5naN7PY5lTdQuzZhk69DSzigYRPvxRSd6JZIsZvAeYoX/zTOLaygwFjM8I+oZWtZZ4fvtIR/QJknI
+        rSm9MqubWxueBWOZfKKeLBTQVbyH3QB+wU/uFC3XOHUMxU74lcRdn6y9J/9G8smoZnJcC4BExivBPrc8
+        e5iW2Atyub4DTwueJIjAfzUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="topViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADnSURBVDhPY8jv7xfInNQeQyxOm1nPxYAMKnpmG0/Yuej/
-        gjMr/6+4tB4vXn5p3f+GTVNfoBgCMuDx81f/l5zc+H/rnV3/dz3YixdvvbPzf/36qa9yJ9bzwQ148uL1
+        gjMr/6+4tB4vXn5p3f/6TVNfoBgCMuDx81f/l5zc+H/rnV3/dz3YixdvvbPzf/36qa9yJ9bzwQ148uL1
         /19/fv+fc3Tl/x3392DViIy33NmBMARmAAh8+fH1f++GRf/n7l1LEE/euux/Uc+UTBQDQODkxetQFn4A
-        0lPeNTtm1ABqGXD34dN/UHHSDQhdtYp58dqdaz58/Aw2hGQDQADZELIMAIG0mTNZF6zdtX7bwVNgSUL4
-        /LU7qAaAAMgQkCCxuL5+pggAtgQfwevb9ygAAAAASUVORK5CYII=
+        0lPeNTtm1ABqGXD7/uN/UHHSDQhdtYp58dqda969/wg2hGQDQADZELIMAIG0mTNZF6zdtX7bwVNgSUL4
+        /LU7qAaAAMgQkCCxuL5+pggAoNIfrsByY7UAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="frontViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADISURBVDhPY6ivn8lV0T3DvKJntjExOG3mTFYGZADSvGTj
-        3v8Pnrz4/+TFa7z47sOn/xat37MZxRCQqSDNe46e+//z16//hMCnz1/+LVi3Y2vuxInscANApv/69Zs8
+        3v8Pnrz4/+TFa7z49v3H/xat37MZxRCQqSDNe46e+//z16//hMCHj5/+LVi3Y2vuxInscANApv/69Zs8
         Q2AGgADIkPYd0//PO7GCIO7fN/d/5qT2GBQDQAAkuevBXoJ4xaX1owZQ1QBQCoPqJ92A0FWrmBev3bnm
-        w8fPYENINgAEkA0hywAQAGWQBWt3rQelMJAkITzrxBJUA0AAZAhIkFhc1NMjAgAUau2TQsYzZwAAAABJ
+        3fuPYENINgAEkA0hywAQAGWQBWt3rQelMJAkITzrxBJUA0AAZAhIkFhc1NMjAgDGT+1vgEFG4AAAAABJ
         RU5ErkJggg==
 </value>
   </data>
@@ -214,20 +214,20 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADfSURBVDhPY8jv7xeo6JltTCxOmzmTlQEZZE5qj5mwc9H/
-        R89f/n/y4jVefPfh03+L1u/ZjGIIyID5Z1b8X3hi7f+ff379JwQ+ff7yb8G6HVtzJ05khxuw4tL6/9vu
+        R89f/n/y4jVefPv+43+L1u/ZjGIIyID5Z1b8X3hi7f+ff379JwQ+fPz0b8G6HVtzJ05khxuw4tL6/9vu
         7vo/5+jK/x+/f4YqxQ1QDIEZsOvB3v877u/+37th0f+TF68TxNsOnvpf3jU7BsUAEJ67dy3UHvwAFCaj
         BlDTgOWX1pFvQOiqerb6dTOebL69gzwDQADZELIMAIG0mfVc9RsmP5uydRlYkhA+f+0OqgEgADKkqGdK
-        JkiCGFxfP1MEAJ6UH4Aobs+IAAAAAElFTkSuQmCC
+        JkiCGFxfP1MEAGIcH26OIQbLAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADZSURBVDhPY6ivny9Q0TPbmFicNnMmKwMyKO+aHbNi64H/
-        j56/+v/kxWu8+O7Dp/8Wrd+zGcUQkAE37j76v/f4+f+/fv/5Twh8+vzl34J1O7bmTpzIDjcAZPrPX7//
+        j56/+v/kxWu8+Pb9x/8Wrd+zGcUQkAE37j76v/f4+f+/fv/5Twh8+Pjp34J1O7bmTpzIDjcAZPrPX7//
         7z127v+Xb9+hSnEDFENgBoDAn79//wMl/p+8eJ0g3nbw1H+QXhQDQGD97iNQFn4A0jNqADUNePTsFVSY
         DANCV61iW7xux5Ov336AJUg2AASQDSHLABAAZhCueSt2PVu2eS9YkhA+f+0OqgEgADKkrGt2JkiCGFxf
-        P1MEAMhTNtGI4ZYhAAAAAElFTkSuQmCC
+        P1MEAIvbNr8Qbi8tAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="rightViewBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -254,33 +254,33 @@
   <data name="drawBtn.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVGhD7ZbPT9NgGMc5gNw9G0K86ElhmOCQhCnTKe26
-        jsjRZBhEuIytJYH/AcNxQbiYeDBsLe86D2Y/yzCLHtSbh5kQB7iAohhRjAzl9X3rW1KWaLaE+Lahn+RJ
-        mrbf5PP0ed83bbCxsbE5UtbHxlpXBeFlORx+jq/JbWtQnphoeSeKy2VRhLhWBGFlIxQ6TR6bGyXz7Jz6
-        SJovieK+3gCuNVF8a/pJYHkpWdiM5wowG0s8KQWDv4xNmHoSRnm9sjGQqp4EqlckYh4Y2X8+oAy/ADn1
-        vbEBXBnp8WJpfPygCdTQBxIzB1jeI/GbLODhrfjQ8nw6+626iZSsLOEmtGkIwhCJ0scoj8s1dxVykQH4
-        MJ35Wd1EJqqk18LhuyRKnz7ga9PlGeCDPbNueHG6Wysm0g8PTSJZ+ArUpy4SpQ+WvwGYj8Yvr8vjcs31
-        astJ2xPJwud4bqmTROnDyn4HC7yf/iWPJ4Kf3U6MvpbzeQeJ0qeWL6/Ls4CtMHHOT6L04eJc+7GRZ4GP
-        J1H6YPla17wHMLumkq9nw1pe3rvA+0iUPpaWZwDfUY88Om04EqWPJi/xW7b8/4Zd4J2szH/5mzz+UTPK
-        o9PGS6L0sbQ8+rfpOhbybJT/gY5KlkTpg+U9UX7bkvJeqf9SPfJ9sp8hUfpYWh6dNt21yqMN+x2d824S
-        pY+l5XfUk6eGlWvFmuSj/A46KntJ1Bzsq82DFbWxfCdxedVy8hionngA881wd7FpfWDGsWcpeUwl31jC
-        DWhNqE0bN+879qrlvbL/CnndXMSmz1xQZ1s0+YMm0CTwcjK9PGZqsm3GeZ2DqUjroSbwnhhR3EVTy2NC
-        o11vOj0+qDehLac/eyKATyfymnkZDPRsBUecxanJ9kj03tkOctvGxsbmqGlo+A3ipM3r3+sxTAAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKrSURBVGhD7ZbPT9NgGMd3ALl7NoR40ZMOMMEhCVO26WjX
+        dUSOJsMgQkJka0ngf8BwXBAuehJYy7vOw8x+lWEWPag3DzNh8sMFFMX4AyNDee1b35KyRLMlxLcN/SRP
+        0rT9Jp+nz/u+qc3CwsLiSNkYGWla47gXpXD4GbrGt81BaWys8S3PL5d4HqJa5bjVzVDoNH5sbKT003Py
+        Q2GuyPP7WgOo1nn+jeEngeSFx/mtWDYPM9F4ojg8/EvfhKEnoZfXKhMFycpJKPUSR4wDJQbOB6WB5yAr
+        v9M3gCotPFosjo4eNLHC8+9xzBggeY/AbtGAhTdi/ctzqcy3yiaSorSEmlCnwXH9OEoevTwq54wbMpFe
+        +CCV/lnZRHpeSq2Hw7dxlDzdwG/X5Cngh53TLnhxskMtKtIDD00ikf8K5CdOHCUPkvcC7wf9l9fkUTln
+        utTlpO6JRP5TLLvUhqPkocVACw18H/8ljyaCnt2MD70Sc7kWHCVPNV9ek6cBXaZiTABHycPEmOZjI08D
+        P4uj5EHy1a55N/DuGkq+lg1rennfAuvHUfKYWp4CbGst8sppw+AoeVR5gd225P839ALroEX289/k0Y+a
+        Xl45bXw4Sh5Tyyv/Nu3HQp6eZX8oRyWNo+RB8u5Z9osp5X1Cz6Va5LvFAIWj5DG1vHLadFQr7wHe78o5
+        78JR8phafkc+eWpA8hSqkVea3FGOyi4cNQb7ckNfWa4r3YpfXjOdPALKJ+7DXAPcXazf6J2y75lKHlHO
+        1a2gBtQm5PrN6/fse5XyPjFwBb9uLKKTZy7I042q/EETyiTQcjK8PGJi3D7luMbAZKTpUBNoTwxKroKh
+        5RGhofbXbVf9UGtCXU5/9kQQnU74NePSF+zcvjPoKEyMN0fm755txbctLCwsjhqb7TcOgc1mEr+j+wAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="toolStripButton11.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHJSURBVDhPlZLdThpBGIa3V9Jb8Qp6GT3tgbZJ40FDoxE1
-        lhogRVsBWUq6tisFuqusILj8iIiyYqKgHKBSW7AcNFZaFunrzphuIEukfsmTTDLzPt/Ml2FGp989HLO/
-        90zPfWKt7lDQzgpp73K0uhiIfO3G7Q9XzI4PLobBA6a7SHhTOUZm7xiriTx4KYnuuvzVhLxVoOslUf5r
-        mmWdPZIpx0cvCeuCcIoe/leVag2Pn1vo+kssi9XNQttkYT265L4Cck5M77VNs97XBoGUVMAJMk7P66h+
-        v+jh7FsdgWiGniNY3QHZICCzSOQOIWzkIMR7WUnsavtHusDWT3AfDIKgdr1IOj+Q0HoGqd2iUSDn9umg
-        7qrWtQqlfARR3ukvuGoD500jJ5cqPFkRzu0l+BQetrgHL7i5U4NA7WgfRzXiy4kQyhKkSpQSOYnh877Y
-        eeY3jwwUNH6rcGmdu8O1qzqUegFT0pvUwCcUtD/gU5axU8vjoFGk4cNGicpexd6WmAk7d+cQrzsdOLc4
-        2vmi+UMPE8YlW5QZtbiGZhb42DwX+Mmvxfti9bN/+IMQ1irretiRZFtPfC8f0UH+Tz31Tw6TN5Nrk863
-        YYa5ARFQ+NYggy2lAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAHISURBVDhPlZLdThpBGIbXK+mteAVeRk97UGvSeNBgavyL
+        pQbwpyogi8RtuyLCrrqAi4sgKsqCif8HqNQWLAeNSusifbszxg1kidQveZJJZt7nm/kyTPfQ1Iv3jlnP
+        0MRX1uYOLjpYIemdjxZmApFv9bj9K/n+8TkXw6CNqS8S3lBPkMqeYDmeAS+to76ubypQNnN0PReK/bWM
+        sM4GyeD4Fy8JG4KVBD38WPlCES/fWuk6JG9B3MhVLVbWY0ieKyDnQsls1TLi/WgSSOsqOEHB+WUJhR9X
+        DVx8LyEQTdFzBJs7oJgEZBbx9AGEtTSEWCNL8V19/9gQ2JsJnoNJsKhfL5LMtCS4mkJi99AsUNJ7dFBP
+        1d29BvX0GKKy01xwWwUuK2bOrjV4tkQ4tz/Dp/Kwxzx4x02cmwRaTf84mhlfWoRwKkHKRymRMxkLWbHW
+        5e/vbCko/9bg0jvXh4u3JailHAalsUTLJ+T0P+BT57FTzGC/fEjDB+UjKvsgTx4xfQ7uySHe12pwbnK0
+        81XlpxEm9Er2KNNtdbUPT/PyJ87/iw/LTbHx7B9+P4hwftUIjyozd698PR10kP9Tb/wDr8mbybVJ54cw
+        w/wD5i34ulk0pUgAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
